test/code/test_include_parse_error.out

Parse error: syntax error, unexpected 'is' (T_STRING) in {{CWD}}/test/code/error.php on line 3
