test/code/test_include_parse_error.php
<?php

include(__DIR__ . "/error.php");

